--- a/pa2/mlsys_hw2.ipynb
+++ b/pa2/mlsys_hw2.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Machine Learning Systems Homework 2\n",
     "\n",
-    "<a target=\"_blank\" href=\"\">\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/hao-ai-lab/dsc291-PA/blob/main/pa2/mlsys_hw2.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
-    "**Homework due: May 28, 2024, 11:59 pm, PDT**.\n",
+    "**Homework due: June 2, 2024, 11:59 pm, PDT**.\n",
     "\n",
     "Optimizing tensor programs is crucial in machine learning compilation as it ensures that operators like matrix multiplication, convolution, and reduction run efficiently on different hardware. \n",
     "In this assignment, you'll utilize a tensor program optimization interface within [TVM](https://tvm.apache.org) to schedule these common operators effectively.\n",
